day:02 jsx, state

--- a/test.html
+++ b/test.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div style="color: red; font-size: 15px"></div>
     asdfas
+
+    <br />
+    <input />
   </body>
 </html>
