day:07 todo, axios

--- a/test.html
+++ b/test.html
@@ -12,5 +12,13 @@
 
     <br />
     <input />
+
+    <script>
+      console.log(1);
+      setTimeout(() => {
+        console.log(2);
+      }, 0);
+      console.log(3);
+    </script>
   </body>
 </html>
